--- a/game/Index.html
+++ b/game/Index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
+<html lang="en">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <Style>
+   <style>
        body{
            background-image: url("imgs/back1.png");
            width: 1440px;
@@ -117,7 +118,7 @@ margin-right: auto;
  animation-iteration-count: infinite;
 }
 
-   </Style>
+   </style>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
     <body>
