--- a/game/credits.html
+++ b/game/credits.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <h1>A Special thanks too:</h1>
-    <p>Luke Daniel Caisip</br>Sebastian Thomas Tunaya</br>Joseph Zulueta</p>
+    <p>Luke Daniel Caisip<br>Sebastian Thomas Tunaya<br>Joseph Zulueta</p>
     <button type="button" class="btn btn-primary" onclick="Home()">Home</button>
 
     <script>
