--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
   <body>
     <div class="container-fluid" id="Header">
       <img src="Logo.png" alt="lmao" style="width: 100px;">
+        <button type="button" class="btn btn-primary" onclick="location.href='Makers.html';">Creators</button>
     </div>
   
     <div class="container" id="items">
@@ -125,31 +126,31 @@
           <div class="card">
             <img src="GWA.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button id="-1" type="button" onclick="var x=25, y=1, c='GWA BEFORE JOWA JACKET' ;Save(x,y,c)" class="add" >Add to cart</button></p>
+              <h4><b>GWA before jow jacket</b></h4>
+              <p>A special reminder for all your friends.- 600</p>
+              <p><button id="-1" type="button" onclick="var x=600, y=1, c='GWA before jowa jacket' ;Save(x,y,c)" class="add" >Add to cart</button></p>
             </div>
           </div>
         </div>
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="clo1.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=2 ;Save(x,y)" class="add">Add to cart</button></p>
+              <h4><b>Clothes</b></h4>
+              <p>Clothes on a hanger. - 500</p>
+              <p><button id="-2" type="button" onclick="var x=500;var y=2, c='Clothes' ;Save(x,y,c)" class="add">Add to cart</button></p>
             </div>
           </div>
         </div>
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="clo2.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=3 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Blue clothes</b></h4>
+              <p>Blue clothes on a hanger. - 750</p>
+              <p><button id="-3" type="button" onclick="var x=750;var y=3, c='Blue clothes' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
@@ -159,33 +160,33 @@
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="clo3.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=4 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Blue suits</b></h4>
+              <p>Blue suits on a hanger. - 650</p>
+              <p><button id="-4" type="button" onclick="var x=650;var y=4, c='Blue suits' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="clo4.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=5 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Red and Green clothes</b></h4>
+              <p>Red and Green clothes on a hanger. - 550</p>
+              <p><button id="-5" type="button" onclick="var x=550;var y=5, c='Red and Green clothes' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="clo5.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=6 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Lightblue clothes</b></h4>
+              <p>Lightblue clothes on a hanger. - 800</p>
+              <p><button id="-6" type="button" onclick="var x=800;var y=6, c='Lightblue clothes' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
@@ -203,8 +204,8 @@
             <img src="Spin.png" alt="GWA" style="width:100%">
             <div class="container">
               <h4><b>FIDGET SPINNER CAMERA</b></h4>
-              <p>Able to get a full 360 angle of that beautiful smile.</p>
-              <p><button id="-7" type="button" onclick="var x=500, y=7, c='FIDGET SPINNER CAMERA';Save(x,y,c)" class="add"  >Add to cart</button></p>
+              <p>Able to get a full 360 angle of that beautiful smile. - 2500</p>
+              <p><button id="-7" type="button" onclick="var x=2500, y=7, c='FIDGET SPINNER CAMERA';Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
@@ -213,20 +214,20 @@
           <div class="card">
             <img src="Ram.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>RAM AS DURABLE AS A PISAYER'S BRAIN</b></h4>
-              <p>Backup RAM for when you forget you brain at home.</p>
-              <p><button type="button" onclick="var x=500;var y=8 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Ram durable as a Pisayer's brain</b></h4>
+              <p>Backup RAM for when you forget you brain at home.  - 1500</p>
+              <p><button id="-8" type="button" onclick="var x=1500;var y=8, c='Ram durable as a Pisayers brain' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="ele1.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=9 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Generic Laptop</b></h4>
+              <p>This is a Laptop. - 3750</p>
+              <p><button id="-9" type="button" onclick="var x=3750;var y=9, c='Generic Laptop' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
@@ -236,33 +237,33 @@
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="ele2.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=10 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Generic phone</b></h4>
+              <p>This is a phone. - 2150</p>
+              <p><button id="-10" type="button" onclick="var x=2150;var y=10, c='Generic Phone' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="ele3.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=11 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Small toaster</b></h4>
+              <p>Yup thats pretty small - 3460</p>
+              <p><button id="-11" type="button" onclick="var x=3460;var y=11, c='Small toaster' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="ele4.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=12 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Fan</b></h4>
+              <p>My number 1 fan. - 999</p>
+              <p><button id="-12" type="button" onclick="var x=999;var y=12, c='Fan' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
@@ -276,33 +277,33 @@
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="stu1.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=13 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Markers</b></h4>
+              <p>They look pretty permanent. - 70</p>
+              <p><button id="-13" type="button" onclick="var x=70;var y=13, c='Markers' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="stu2.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=14 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Waterbottle</b></h4>
+              <p>Gotta recycle thoes tears. - 350</p>
+              <p><button id="-14" type="button" onclick="var x=350;var y=14, c='Waterbottle' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="stu3.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=15 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Highlighters</b></h4>
+              <p>Makes it easier to see thoes words you cant remember. - 250</p>
+              <p><button id="-15" type="button" onclick="var x=250;var y=15, c='Highlighters' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
@@ -312,33 +313,33 @@
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="stu4.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=16 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Pencils</b></h4>
+              <p>Not so permanent. - 150</p>
+              <p><button id="-16" type="button" onclick="var x=150;var y=16, c='Pencils' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="stu5.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=17 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Braincells</b></h4>
+              <p>Can never get enough of these. - 1050</p>
+              <p><button id="-17" type="button" onclick="var x=1050;var y=17, c='Braincells' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="stu6.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=18 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Pens</b></h4>
+              <p>A little more permanent then pencils. - 200</p>
+              <p><button id="-18" type="button" onclick="var x=200;var y=18, c='Pens' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
@@ -363,22 +364,22 @@
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="foo1.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=20 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Fruits and things</b></h4>
+              <p>Fruits and things in a bowl. - 350</p>
+              <p><button id="-20" type="button" onclick="var x=350, y=20, c='Fruits and things' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="foo2.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=21 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Meat and things</b></h4>
+              <p>Meat and things on a table. - 1550</p>
+              <p><button id="-21" type="button" onclick="var x=1550, y=21, c='Meat and things' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
@@ -388,33 +389,33 @@
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="foo3.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=22 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Vegtables and things</b></h4>
+              <p>Vegtebales and things on a table. - 550</p>
+              <p><button id="-22" type="button" onclick="var x=550, y=22, c='Vegtables and things' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="foo3.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y=23 ;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>More meat and things</b></h4>
+              <p>More meat and things on a table. - 1650</p>
+              <p><button id="-23" type="button" onclick="var x=1650, y=23, c='Vegtables and things' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
 
         <div class="col-4">
           <div class="card">
-            <img src="GWA.png" alt="GWA" style="width:100%">
+            <img src="foo4.png" alt="GWA" style="width:100%">
             <div class="container">
-              <h4><b>GWA BEFORE JOWA JACKET</b></h4>
-              <p>A special reminder for all your friends.</p>
-              <p><button type="button" onclick="var x=500;var y= 24;Save(x,y)" class="add"  >Add to cart</button></p>
+              <h4><b>Pancakes</b></h4>
+              <p>The sweet release of pancakes. - 2000</p>
+              <p><button id="-24" type="button" onclick="var x=2000, y=24, c='Vegtables and things' ;Save(x,y,c)" class="add"  >Add to cart</button></p>
             </div>
           </div>
         </div>
